# chatbot-AI-langgraph-backend

./: main.py  pyproject.toml
app/: main.py
app/agents/: agent_state.py  llm_manager.py
app/agents/nodes/: chatbot_node.py  normal_chat_node.py  tool_caller_node.py
app/agents/prompt/: normal_chat_prompt.py  routing_prompt.py  sql_generator_prompt.py  sql_nl_responder_prompt.py
app/agents/tools/: sql_query_tool.py
app/core/: config.py  logger.py
app/db/: dbconnection.py
app/models/: __init__.py  category.py  chat_message.py  customer.py  enums.py  inventory.py  menu_item.py  order.py  order_item.py  payment.py  session.py  user.py
app/repository/: session_repository.py
app/routers/: chat.py  session.py
app/schemas/: session.py
app/services/: chatbot_service.py  session_service.py
